package tasks.persistence.specifications;

public class TasksSpecification {
}
